# peftlint

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: adapter-config-parser.md  lora-inventory.md  ruleset-v1.md  safetensors-parser.md
examples/: verify_inventory.py
src/peftlint/: __init__.py  _bounded_json.py  adapter_config.py  evidence.py  lora_evaluation.py  lora_inventory.py  safetensors.py
tests/: test_adapter_config.py  test_bounded_json.py  test_evidence.py  test_example.py  test_lora_evaluation.py  test_lora_inventory.py  test_safetensors.py  test_safetensors_storage.py
tests/fixtures/: peft-0.19.1-lora-state.json
