[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[project]
name = "peftlint"
version = "0.1.0.dev0"
description = "Static compatibility checks for LoRA adapters"
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
license-files = ["LICENSE"]
authors = [
  { name = "Omar Ibrahim", email = "31526072+omar07ibrahim@users.noreply.github.com" },
]
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Typing :: Typed",
]
dependencies = []

[project.optional-dependencies]
dev = [
  "build>=1.2",
  "mypy>=1.15",
  "pytest>=8.3",
  "pytest-cov>=6.0",
  "ruff>=0.11",
]

[project.urls]
Repository = "https://github.com/omar07ibrahim/peftlint"
Issues = "https://github.com/omar07ibrahim/peftlint/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/peftlint"]

[tool.pytest.ini_options]
addopts = [
  "--strict-config",
  "--strict-markers",
  "--cov=peftlint",
  "--cov-report=term-missing",
  "-ra",
]
testpaths = ["tests"]

[tool.coverage.run]
branch = true
source = ["peftlint"]

[tool.coverage.report]
fail_under = 95
show_missing = true
skip_covered = true

[tool.mypy]
python_version = "3.11"
strict = true
warn_unreachable = true

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["B", "E4", "E7", "E9", "F", "I", "RUF", "UP"]
